<?xml version="1.0" encoding="utf-8"?>
<TableLayout android:id="@+id/TableLayout1" xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent">
    <TableRow android:id="@+id/tableRow3" android:layout_width="wrap_content" android:layout_height="wrap_content"></TableRow>
    <TableRow android:baselineAligned="false" android:id="@+id/tableRow2" android:layout_width="wrap_content" android:layout_height="wrap_content">
    </TableRow>
    <TableRow android:id="@+id/tableRow1" android:layout_width="wrap_content" android:layout_height="wrap_content">
        <TextView android:layout_width="wrap_content" android:layout_marginLeft="10dp" android:textAppearance="?android:attr/textAppearanceSmall" android:layout_height="wrap_content" android:layout_marginRight="10dp" android:layout_marginTop="10dp" android:layout_gravity="top" android:text="@string/username_label" android:id="@+id/usernameLabel"></TextView>
    </TableRow>
    <EditText android:layout_margin="10dp" android:layout_width="200dp" android:width="150dp" android:id="@+id/usernameTxt" android:layout_height="wrap_content">
        <requestFocus></requestFocus>
    </EditText>
    <TextView android:layout_width="wrap_content" android:textAppearance="?android:attr/textAppearanceSmall" android:layout_height="wrap_content" android:layout_marginLeft="10dp" android:layout_marginRight="10dp" android:layout_marginTop="10dp" android:text="@string/password_label" android:id="@+id/passwordLabel"></TextView>
    <EditText android:layout_margin="10dp" android:inputType="textPassword" android:layout_width="200dp" android:layout_height="wrap_content" android:layout_gravity="center" android:id="@+id/passwordTxt"></EditText>
    <TextView android:layout_marginTop="10dp" android:layout_marginRight="10dp" android:layout_width="wrap_content" android:textAppearance="?android:attr/textAppearanceSmall" android:layout_height="wrap_content" android:layout_marginLeft="10dp" android:text="@string/select_ur_idp_label" android:id="@+id/idpSpinnerLabel"></TextView>
    <Spinner android:layout_margin="10dp" android:layout_width="wrap_content" android:layout_height="wrap_content" android:id="@+id/idpSpinner"></Spinner>
    <Button android:clickable="true" android:layout_width="match_parent" android:layout_height="50dp" android:layout_gravity="center" android:layout_marginLeft="10dp" android:layout_marginRight="10dp" android:layout_marginTop="10dp" android:id="@+id/loginButton" android:text="@string/authenticate_button_text"></Button>
    <Button android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="10dp" android:layout_marginRight="10dp" android:id="@+id/backButton" android:text="@string/back_button_text"></Button>
</TableLayout>
